cabal-version: 2.4
name: mustard
version: 0.1.0.0

common shared
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wno-unused-do-bind
    -Wno-monomorphism-restriction
    -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-safe-haskell-mode
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module

library
  import: shared
  hs-source-dirs: src
  exposed-modules: Mustard
  other-modules: Error, Token, Sexpr, Bexpr, Ast, AstUtil, Qualify, Resolve
  build-depends: base, extra, containers, split

executable driver
  import: shared
  hs-source-dirs: driver
  main-is: Main.hs
  build-depends: mustard, base, containers, pretty-simple
